# PySide6-DAW

./: README.md  pyproject.toml
.github/workflows/: example.yml  formatting.yml  installation.yml  linting.yml
PySide6DAW/Widgets/: DesktopApplication.py  SideBar.py  SideBarButton.py  __init__.py
PySide6_DAW/: __init__.py
PySide6_DAW/Widgets/: ApplicationWidget.py  DesktopApplication.py  SideBar.py  SideBarButton.py  ToolTip.py  __init__.py
example/: __main__.py  main.py  style.qss  style2.qss
